fix nav item alignment

--- a/CSS/landing_and_nav.css
+++ b/CSS/landing_and_nav.css
@@ -53,12 +53,11 @@ a {
 
 .nav a {
   font-size: clamp(30px, 5vw, 50px);
-  margin-right: 40px;
+  margin-right: 35px;
   font-weight: 200;
   text-decoration: none;
   color: #eeeeee;
   display: inline-block;
-  margin-bottom: 10px;
   position: relative;
 }
 .nav a::after {
